# flame

./: pyproject.toml  setup.py  train.sh
.github/workflows/: tests.yml
flame/: config_manager.py  data.py  logging.py  train.py
flame/components/: checkpoint.py  lr_scheduler.py
flame/models/: activation_offloading.py  converter.py  parallelize_fla.py
flame/models/quantization/: __init__.py  bnb.py  nvfp4.py
flame/tools/: utils.py
flame/utils/: convert_dcp_to_hf.py  convert_hf_to_dcp.py  preprocess.py
tests/: conftest.py  test_data.py  test_model_loading.py  test_quantization.py
